2009-04-09  David Kilzer  <ddkilzer@apple.com>

        Reinstating <rdar://problem/6718589> Option to turn off SVG DOM Objective-C bindings

        Rolled r42345 back in.  The build failure was caused by an
        internal script which had not been updated the same way that
        build-webkit was updated.

        * Configurations/JavaScriptCore.xcconfig:

2009-04-09  Alexey Proskuryakov  <ap@webkit.org>

        Reverting <rdar://problem/6718589> Option to turn off SVG DOM Objective-C bindings.
        It broke Mac build, and I don't know how to fix it.

        * Configurations/JavaScriptCore.xcconfig:

2009-04-09  Xan Lopez  <xlopez@igalia.com>

        Unreviewed build fix.

        Checking for __GLIBCXX__ being bigger than some date is not enough
        to get std::tr1, C++0x has to be in use too. Add another check for
        __GXX_EXPERIMENTAL_CXX0X__.

        * wtf/TypeTraits.h:

2009-04-08  Oliver Hunt  <oliver@apple.com>

        Reviewed by Adam Roben.

        Fix assertion failure in function.apply

        The result of excess arguments to function.apply is irrelevant
        so we don't need to provide a result register.  We were providing
        temporary result register but not ref'ing it resulting in an
        assertion failure.

        * parser/Nodes.cpp:
        (JSC::ApplyFunctionCallDotNode::emitBytecode):

2009-04-08  David Kilzer  <ddkilzer@apple.com>

        <rdar://problem/6718589> Option to turn off SVG DOM Objective-C bindings

        Reviewed by Darin Adler and Maciej Stachowiak.

        Introduce the ENABLE_SVG_DOM_OBJC_BINDINGS feature define so
        that SVG DOM Objective-C bindings may be optionally disabled.

        * Configurations/JavaScriptCore.xcconfig: Added
        ENABLE_SVG_DOM_OBJC_BINDINGS variable and use it in
        FEATURE_DEFINES.

2009-04-08  Paul Pedriana <ppedriana@ea.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=20422